--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
-    "commit":"git commit -am"
+    "commit": "git commit -am",
+    "push": "git push github master"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
