--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
-    "client":"npm start --prefix client",
-    "dev":"concurrently \"npm run server\" \"npm run client\"",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm:server\" \"npm:client\"",
     "commit": "git commit -am",
     "push": "git push github master"
   },
