--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently  \"npm:server\" \"npm:client\"",
+    "dev": "concurrently -k \"npm:server\" \"npm:client\"",
     "commit": "git commit -am",
     "push": "git push github master"
   },
