--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix client",
     "dev": "concurrently -k \"npm:server\" \"npm:client\"",
     "commit": "git commit -am",
-    "push": "git push github master"
+    "push": "git push github master",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
